--- a/MyTaiwanStock/Base.lproj/Main.storyboard
+++ b/MyTaiwanStock/Base.lproj/Main.storyboard
@@ -760,23 +760,23 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="newsCell" id="rvN-rk-0s8" customClass="NewsListTableViewCell" customModule="MyTaiwanStock" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.666666030883789" width="414" height="182"/>
+                                        <rect key="frame" x="0.0" y="44.666666030883789" width="414" height="204.33332824707031"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rvN-rk-0s8" id="rL8-z7-O53">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="182"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="204.33332824707031"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Sa0-Pd-IT3">
-                                                    <rect key="frame" x="5" y="5" width="404" height="172"/>
+                                                    <rect key="frame" x="5" y="5" width="404" height="194.33333333333334"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iiA-RP-30k">
-                                                            <rect key="frame" x="0.0" y="0.0" width="80" height="172"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="80" height="194.33333333333334"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="80" id="Cry-KH-IEH"/>
                                                             </constraints>
                                                         </imageView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="5nJ-BK-23T">
-                                                            <rect key="frame" x="85" y="0.0" width="319" height="172"/>
+                                                            <rect key="frame" x="85" y="0.0" width="319" height="194.33333333333334"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="News Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fh5-No-eWi">
                                                                     <rect key="frame" x="0.0" y="0.0" width="319" height="20.333333333333332"/>
@@ -785,13 +785,13 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="detail" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Er-nv-s7J" userLabel="Detail">
-                                                                    <rect key="frame" x="0.0" y="20.333333333333329" width="319" height="137.33333333333337"/>
+                                                                    <rect key="frame" x="0.0" y="20.333333333333329" width="319" height="159.66666666666669"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                     <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="News date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7jc-nc-AXH">
-                                                                    <rect key="frame" x="0.0" y="157.66666666666666" width="319" height="14.333333333333343"/>
+                                                                    <rect key="frame" x="0.0" y="180" width="319" height="14.333333333333343"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                                     <color key="textColor" systemColor="systemGray2Color"/>
                                                                     <nil key="highlightedColor"/>
@@ -824,6 +824,51 @@
                                             <outlet property="title" destination="fh5-No-eWi" id="gFj-6o-CdR"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="newsCell2" rowHeight="221" id="d9R-5u-8nb" customClass="NewsListTableViewCell2" customModule="MyTaiwanStock" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="248.9999942779541" width="414" height="221"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="d9R-5u-8nb" id="fcn-cx-sCy">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="221"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rRp-fD-Xmv">
+                                                    <rect key="frame" x="5" y="5" width="404" height="211"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EMp-7k-1Ta">
+                                                    <rect key="frame" x="20" y="155.66666666666666" width="374" height="20.333333333333343"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZHY-8F-ptu">
+                                                    <rect key="frame" x="20" y="181" width="374" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="ct0-yU-KMc"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="EMp-7k-1Ta" secondAttribute="trailing" constant="20" symbolic="YES" id="6lb-Oa-PER"/>
+                                                <constraint firstItem="ZHY-8F-ptu" firstAttribute="leading" secondItem="fcn-cx-sCy" secondAttribute="leadingMargin" id="CF9-Uy-uop"/>
+                                                <constraint firstAttribute="bottom" secondItem="ZHY-8F-ptu" secondAttribute="bottom" constant="20" symbolic="YES" id="EGX-al-xyC"/>
+                                                <constraint firstItem="EMp-7k-1Ta" firstAttribute="leading" secondItem="fcn-cx-sCy" secondAttribute="leading" constant="20" symbolic="YES" id="Ehv-H4-rxP"/>
+                                                <constraint firstItem="ZHY-8F-ptu" firstAttribute="top" secondItem="EMp-7k-1Ta" secondAttribute="bottom" constant="5" id="Gn9-e1-JQg"/>
+                                                <constraint firstAttribute="trailing" secondItem="rRp-fD-Xmv" secondAttribute="trailing" constant="5" id="Vj6-Zh-el3"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="ZHY-8F-ptu" secondAttribute="trailing" id="aES-hp-btQ"/>
+                                                <constraint firstAttribute="bottom" secondItem="rRp-fD-Xmv" secondAttribute="bottom" constant="5" id="gc6-2V-m0X"/>
+                                                <constraint firstItem="rRp-fD-Xmv" firstAttribute="top" secondItem="fcn-cx-sCy" secondAttribute="top" constant="5" id="tyh-Yz-1Vv"/>
+                                                <constraint firstItem="rRp-fD-Xmv" firstAttribute="leading" secondItem="fcn-cx-sCy" secondAttribute="leading" constant="5" id="wjZ-sR-NUH"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="date" destination="ZHY-8F-ptu" id="fSv-MV-lef"/>
+                                            <outlet property="imagePreview" destination="rRp-fD-Xmv" id="LvT-6z-2mi"/>
+                                            <outlet property="title" destination="EMp-7k-1Ta" id="4dR-Cr-rTd"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
@@ -844,7 +889,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bgu-cj-Ll7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="352" y="1755"/>
+            <point key="canvasLocation" x="350.72463768115944" y="1754.3478260869567"/>
         </scene>
         <!--統計-->
         <scene sceneID="OCC-Ev-2cD">
